--- a/server/djangoapp/templates/djangoapp/contact.html
+++ b/server/djangoapp/templates/djangoapp/contact.html
@@ -11,9 +11,9 @@
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="https://rup.mybluemix.net/djangoapp/">Dealership Review</a>
-                <a class="navbar-brand" href="https://rup.mybluemix.net/djangoapp/about">About Us</a>
-                <a class="navbar-brand" href="https://rup.mybluemix.net/djangoapp/contact"><b>Contact Us</b></a>
+                <a class="navbar-brand" href={% url 'djangoapp:index' %}"><b>Dealership Review</b></a>
+                <a class="navbar-brand" href="{% url 'djangoapp:about' %}">About Us</a>
+                <a class="navbar-brand" href="{% url 'djangoapp:contact' %}">Contact Us</a>
             </div>
         </div>
     </nav>
