--- a/server/djangoapp/templates/djangoapp/about.html
+++ b/server/djangoapp/templates/djangoapp/about.html
@@ -11,9 +11,9 @@
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="https://rup.mybluemix.net/djangoapp/">Dealership Review</a>
-                <a class="navbar-brand" href="https://rup.mybluemix.net/djangoapp/about"><b>About Us</b></a>
-                <a class="navbar-brand" href="https://rup.mybluemix.net/djangoapp/contact">Contact Us</a>
+                <a class="navbar-brand" href="https://rup.eu-gb.mybluemix.net/djangoapp/">Dealership Review</a>
+                <a class="navbar-brand" href="https://rup.eu-gb.mybluemix.net/djangoapp/about"><b>About Us</b></a>
+                <a class="navbar-brand" href="https://rup.eu-gb.mybluemix.net/djangoapp/contact">Contact Us</a>
             </div>
         </div>
     </nav>
